# QwaveSmartCamera_EagleEYE

./: BOM_Industrial_QWA17_EagleEye_V7.xls  README.md
LabVIEW-Examples/Camera Image Aquisition/: Advance Loop Get Images.vi  Camera Image Aquisition.lvproj  Continuous Camera Test.vi  Host_GUI_Display_Image.vi  Image Variables.lvlib  Simple Loop Get Images to Host GUI.vi  Single Shot Camera Test.vi
LabVIEW-Examples/Demo Real Time processing with display/: Demo Smart Camera.lvproj  Demo_SmartCam_GettingStart.vi
LabVIEW-Examples/Digital Input Output/: Blinking LED.vi  Digital.lvproj  GPIO Event.vi  User Event IO.vi
LabVIEW-Examples/Display Image with Processing at RPi monitor/: Display IMAQ at Monitor with NI-VISION.vi  Display Image with Processing at RPi monitor.lvproj  Geometric Matching RPi Monitor.vi
LabVIEW-Examples/Light Source Output WS2812 RGB/: WS2812 Controller.vi  WS2812 RGB.lvproj  WS2812 Ring LED.vi  WS2812 Write Index.vi  WS2812 Write N LED.vi
LabVIEW-Examples/MachineVision_AOI PCB Inspector/: AOI - PCB.vi  AOI PCB Inspector.lvproj
LabVIEW-Examples/MachineVision_Barcode Detector/: Barcode Detector.lvproj  Barcode Detector.vi  Save Moving Image.vi  Variable.lvlib
LabVIEW-Examples/MachineVision_Barcode Reader/: Barcode Reader.lvproj  Camera Barcode.vi  Camera Variable.lvlib
LabVIEW-Examples/MachineVision_Pills Color Inspector/: Draw_Rect_Text.vi  (+2 more)
Python_cpp_Examples/_eagleEYE_cpp_openCV_example/: CMakeLists.txt  face-detection.cpp
Python_cpp_Examples/_eagleEYE_labview_openCV_Libs_example/: CMakeLists.txt  FaceDetect.cpp  FaceDetectMask.cpp
(+41 files in other folders)
